2005-08-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add gtk_window_[sg]et_deletable.

2005-08-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tmpl/gtkstatusicon.sgml: Add a long description.

	* gtk/Makefile.am (HTML_IMAGES): Add stock_select_all_24.png
	
	* gtk/gtk-sections.txt: 
	* gtk/tmpl/gtkstock.sgml: Add GTK_STOCK_SELECT_ALL. 

	* gtk/gtk.types: Add gtk_status_icon_get_type

	* gtk/gtk-docs.sgml: Add GtkStatusIcon

	* gtk/gtk-sections.txt: Add GtkStatusIcon

2005-08-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-update-icon-cache.xml: 
	* gtk/gtk-update-icon-cache.1: Updates.

2005-08-26  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf/gdk-pixbuf.sgml: 
	* gdk/gdk-docs.sgml: 
	* gtk/gtk-docs.sgml: Add indices for new
	symbols in 2.10

	* gdk/gdk-sections.txt: Add font options
	API.

2005-08-24  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.8.2 ===

	* === Released 2.8.1 ===

2005-08-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-update-icon-cache.xml: 
	* gtk/gtk-update-icon-cache.1: Updates.

2005-08-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tmpl/gtktreemodel.sgml: Fix an 
	example.  (#313595, Olexiy Avramchenko)

2005-08-13  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.8.0 ===

2005-08-12  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf/tmpl/scaling.sgml: Remove a
	confusing gdk_window_set_back_pixmap() call
	from the example, pointed out by Owen
	Taylor.

2005-08-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/building.sgml: Updates.

2005-08-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/Makefile.am: Add new stock images.

	* gtk/gtk-sections.txt: 
	* gtk/Makefile.am: 
	* gdk-pixbuf/gdk-pixbuf-sections.txt: 
	* gdk/tmpl/images.sgml: Small fixes

2005-08-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.7.5 ===

2005-08-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.types: Add gtk_clipboard_get_type. (#312443, Danny Milo)
