@@ -5146,6 +5146,7 @@ gtk_selection_data_get_uris
 gtk_selection_data_get_targets
 gtk_selection_data_targets_include_image
 gtk_selection_data_targets_include_text
+gtk_selection_data_targets_include_uri
 gtk_selection_remove_all
 gtk_selection_clear
 gtk_selection_data_copy
