@@ -2611,6 +2611,7 @@ gtk_selection_data_set_text
 gtk_selection_data_set_uris
 gtk_selection_data_targets_include_image
 gtk_selection_data_targets_include_text
+gtk_selection_data_targets_include_uri
 gtk_selection_owner_set
 gtk_selection_owner_set_for_display
 gtk_selection_remove_all
