@@ -1,6 +1,7 @@
 2005-08-30  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtk-sections.txt: Add gtk_window_[sg]et_deletable.
+	Add gtk_selection_data_targets_include_uri.
 
 2005-08-29  Matthias Clasen  <mclasen@redhat.com>
 
